:style: (hotfix) fix the style of SocialLink displayed on tablet

--- a/src/components/SocialInfoContainer.css
+++ b/src/components/SocialInfoContainer.css
@@ -1,6 +1,7 @@
 .SocialInfoContainer {
     display: flex; 
     flex-direction: row; 
+    overflow: scroll; 
 }
 
 .SocialInfoContainer:not(first-of-type) {
@@ -10,8 +11,9 @@
 /* tablet style  */
 @media screen and (min-width: 768px){
     .SocialInfoContainer {
-        min-width: 200px;
-        max-width: 250px; 
+
+        height: 25px; 
+        width: 50%; 
         overflow: scroll; 
     }
 }
